<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ToDoHome">

    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Welcome"
        android:textSize="45sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>

    <TextView
        android:id="@+id/textview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="5dp"
        android:text="@string/to_do_school_list"
        android:textColor="#FFD54F"
        android:textSize="30sp" />

    <ListView
        android:id="@+id/List_item1"
        android:layout_width="wrap_content"
        android:layout_height="268dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:background="@drawable/list_btns"
            android:textColor="@android:color/background_light"
            android:id="@+id/button_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnCreate_Click"
            android:text="@string/create" />

        <Button
            android:background="@drawable/list_btns"
            android:textColor="@android:color/background_light"
            android:id="@+id/button_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:onClick="btnCreate_Click2"
            android:text="@string/history" />

        <Button
            android:background="@drawable/list_btns"
            android:textColor="@android:color/background_light"
            android:id="@+id/button_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:onClick="btnCreate_Click2"
            android:text="@string/option" />

    </LinearLayout>

    <Button
        android:layout_marginTop="18dp"
        android:id="@+id/button_loginH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/list_btns"
        android:onClick="btnCreate_Click2"
        android:text="@string/log_out"
        android:textColor="@android:color/background_light" />


</LinearLayout>
